# fractol

./: README.md
fractol/: CMakeLists.txt  Makefile  draw.c  fractal.c  fractol.h  ft_putstr.c  ft_strcmp.c  initialize.c  linux_controls.c  mac_controls.c  main.c  operations.c  threads.c
fractol/minilibx_linux/: CMakeLists.txt  Makefile  Makefile.gen  Makefile.mk  configure
fractol/minilibx_linux/test/: main.c
fractol/minilibx_macos/: Makefile
